fix(inline-tabs) update color and align design to figma (#1464)
* feat: inline-tabs-color-update

* fix(inline-tabs): disable fourth tab button for better accessibility

* fix(inline-tabs): remove hover focus styles for inline tab items

* docs: update component readme files

* fix(inline-tabs): update default values for left padding and summary

* chore(tabs): update inline tab snapshots for dark and light modes

--- a/packages/core/src/components/tabs/inline-tabs/inline-tabs.scss
+++ b/packages/core/src/components/tabs/inline-tabs/inline-tabs.scss
@@ -71,8 +71,15 @@
       background-color: var(--tds-folder-tabs-scroll-btn-background-active);
     }
 
-    &:focus {
+    &:focus-visible::before {
+      content: '';
+      position: absolute;
+      inset: 3px;
       @include tds-focus-state;
+    }
+
+    &:focus-visible {
+      outline: 0;
     }
 
     svg {
